TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2008-02-18 MickeM
 + Added propper output handling to process subsystem (now you can execute programs tat return "much" data.
 + Added select support for SSL_write (now you can send "any amount of data" to the (SSL) socket.
   Since check_nrpe doesn't do this it wont work in that end, but still...

2008-02-16 MickeM
 + Refactored ExternalCommand handling so NRPE and new module does the same thing.

2008-02-14 MickeM
 + Added so commands starting in host_ (NSCA Handlers) are sent as host-commands
 * Fixed a copy constructor in NSCA Commands (now service checks are sent as service checks)

2008-02-13 MickeM
 + Added string_length to [Settings] as well (used internally) for all "injected" buffers.
 * Fixed issue with scripts result truncated efter 1024 chars 
    (now they return "all" output and thus you can use the NRPE settings I adde yesterday :)
 + Added hostname setting to [NSCA] section (must have been braindead when I did not add it before)
 + Added to NSCA truncates output when to long.

2008-02-12 MickeM
 + Added new option for the [NRPE] section string_length which is the length of the NRPE strings 
   (notice you need to recompile the check_nrpe to match this value)
 * Improved exception handling in the PDH collector (hopefully less deadlocks)

2008-02-11 MickeM
 + Added encryption support for NSCA module (about half of the algorithms are avalible, 
     if someone wants to use one not available let me know, and I will try to add it)

2008-02-09 MickeM
 + New module CheckExternalScripts to handle 1, external script (similar to the old NRPE but in its own module)
   - Can Check batch/vbs/programs/*
   - Works with NSCA module (if you don't want to have NRPE at the same time)